05_AWS_demo_VPC_S3_EC2_instance_Linux/07_instance.tf
# ------ optional: Create an Elastic IP address
# ------           to have a public IP address for EC2 instance persistent across stop/start
resource "aws_eip" "demo05_inst1" {
  instance = aws_instance.demo05_inst1.id
  domain   = "vpc"
  tags     = { Name = "demo05-inst1" }
}

# ------ Create a SSH key pair from public key file
resource "aws_key_pair" "demo05_kp1" {
  key_name   = "demo05-kp1"
  public_key = file(var.public_sshkey_path)
}

# ------ Create an EC2 instance
resource "aws_instance" "demo05_inst1" {
  # ignore change in cloud-init file after provisioning
  lifecycle {
    ignore_changes = [
      user_data_base64
    ]
  }
  availability_zone      = "${var.aws_region}${var.az}"
  instance_type          = var.inst1_type
  ami                    = local.ami
  key_name               = aws_key_pair.demo05_kp1.id
  subnet_id              = aws_subnet.demo05_public.id
  vpc_security_group_ids = [aws_security_group.demo05_sg1.id]
  tags                   = { Name = "demo05-inst1" }
  user_data_base64       = base64encode(file(var.cloud_init_script))
  iam_instance_profile   = aws_iam_instance_profile.demo05.id
  root_block_device {
    encrypted   = true # use default KMS key aws/ebs
    volume_type = "gp3"
    tags        = { "Name" = "demo05-inst1-boot" }
  }
}
